Replace unnecessary libraries